load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "cli151",
    hdrs = glob(["include/cli151/**"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
        "@frozen",
    ],
)

cc_binary(
    name = "example",
    srcs = ["test/test.cpp"],
    deps = [
        ":cli151",
    ],
)

cc_test(
    name = "tests",
    srcs = ["test/unit_tests.cpp"],
    local_defines = [
        "DOCTEST_CONFIG_NO_EXCEPTIONS_BUT_WITH_ALL_ASSERTS=1",
    ],
    deps = [
        ":cli151",
        "@doctest//doctest:main",
    ],
)
